# translatorEsp32

./: .gitignore
backend/translator_app/: STT.py  app.py
firmware/captureVAD/captureData/: captureData.ino
firmware/esp32_streamer/TranslatorESPV1/: TranslatorESPV1.ino
firmware/tflite/: CMakeLists.txt
firmware/tflite/components/tflm/: CMakeLists.txt
firmware/tflite/components/tflm/kissfft/: CMakeLists.txt
firmware/tflite/main/: CMakeLists.txt  constant.h  idf_component.yml  inference.cpp  inference.h  main.cpp  model_data.cc  model_data.h  streamer.cpp  streamer.h  test_kissfft.c  test_kissfft.h
trainingVAD/: captureApp.py  convertWav.py  model_int8.tflite  test.py  trainModel.py
